# ORB_SLAM3_detailed_comments

./: .gitignore  CMakeLists.txt  Dependencies.md  build.sh  build_ros.sh
Examples/: D455.yaml
Examples/Calibration/: recorder_realsense_D435i.cc  recorder_realsense_T265.cc
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_realsense_D435i.cc  mono_realsense_t265.cc  mono_tum.cc  mono_tum_vi.cc
Examples/Monocular-Inertial/: mono_inertial_euroc.cc  mono_inertial_realsense_t265.cc  mono_inertial_tum_vi.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/RGB-D-Inertial/: rgbd_inertial_realsense_D435i.cc
Examples/ROS/ORB_SLAM3_dense/: CMakeLists.txt
Examples/ROS/ORB_SLAM3_dense/launch/: my_rs_mono_imu.launch  my_rs_rgbd.launch  my_rs_stereo_imu.launch
Examples/ROS/ORB_SLAM3_dense/src/: ros_mono.cc  ros_mono_inertial.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc
Examples/ROS/ORB_SLAM3_dense/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc  stereo_realsense_t265.cc  stereo_tum_vi.cc
Examples/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
Examples_old/: D455.yaml
Examples_old/Monocular/: mono_euroc.cc  mono_euroc_old  mono_kitti_old  mono_realsense_D435i_old  mono_realsense_t265_old  mono_tum.cc  mono_tum_old  mono_tum_vi_old
Examples_old/Monocular-Inertial/: mono_inertial_euroc.cc  mono_inertial_euroc_old  mono_inertial_realsense_D435i.cc  mono_inertial_realsense_D435i_old  mono_inertial_realsense_t265_old  mono_inertial_tum_vi.cc  mono_inertial_tum_vi_old
Examples_old/RGB-D/: rgbd_realsense_D435i.cc  rgbd_realsense_D435i_old  rgbd_tum.cc  rgbd_tum_old
Examples_old/RGB-D-Inertial/: rgbd_inertial_realsense_D435i_old
Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt
Examples_old/ROS/ORB_SLAM3/src/: ros_mono.cc  ros_mono_inertial.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc
Examples_old/ROS/ORB_SLAM3/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Examples_old/Stereo/: stereo_euroc.cc  stereo_euroc_old  stereo_kitti_old  stereo_realsense_D435i.cc  stereo_realsense_D435i_old  stereo_realsense_t265_old  stereo_tum_vi.cc  stereo_tum_vi_old
Examples_old/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_euroc_old  stereo_inertial_realsense_D435i.cc  stereo_inertial_realsense_D435i_old  stereo_inertial_realsense_t265.cc  stereo_inertial_realsense_t265_old  stereo_inertial_tum_vi.cc  stereo_inertial_tum_vi_old
include/: Atlas.h  Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeometricTools.h  ImuTypes.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPSolver.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBExtractor.h  ORBMatcher.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  PnPSolver.h  PnPsolver.h  PointCloudMapping.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/: Atlas.cc  Config.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPSolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBExtractor.cc  ORBMatcher.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  PnPSolver.cc  PnPsolver.cc  PointCloudMapping.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
